Added the Build Forms for Travel Requests and Expense Submissions (Class 4)

--- a/501/vite-project/public/A01027743/menu.html
+++ b/501/vite-project/public/A01027743/menu.html
@@ -13,6 +13,7 @@
       <button onclick="location.href='../../src/class1/A01027743/class1.html'">Clase 1</button>
       <button onclick="location.href='../../src/class2/A01027743/class2.html'">Clase 2</button>
       <button onclick="location.href='../../src/class3/A01027743/class3.html'">Clase 3</button>
+      <button onclick="location.href='../../src/class4/A01027743/class4.html'">Clase 4</button>
     </div>
   </div>
 </body>
