--- a/501/vite-project/public/A01027743/menu.html
+++ b/501/vite-project/public/A01027743/menu.html
@@ -14,6 +14,9 @@
       <button onclick="location.href='../../src/class2/A01027743/class2.html'">Clase 2</button>
       <button onclick="location.href='../../src/class3/A01027743/class3.html'">Clase 3</button>
       <button onclick="location.href='../../src/class4/A01027743/class4.html'">Clase 4</button>
+      <button onclick="location.href='../../src/class5/A01027743/class5.html'">Clase 5</button>
+      <button onclick="location.href='../../src/class6/A01027743/class6.html'">Clase 6</button>
+
     </div>
   </div>
 </body>
